--- a/views/home.ejs
+++ b/views/home.ejs
@@ -147,7 +147,6 @@
 															<table class="table cart">
 																<thead>
 																	<tr>
-																		<th >&nbsp;</th>
 																		<th class="cart-product-name">Items</th>
 																		<th class="cart-product-price">Unit Price</th>
 																		<th class="cart-product-quantity">Quantity</th>
@@ -156,9 +155,7 @@
 																</thead>
 																<tbody>
 																	<tr class="cart_item">
-																		<td >
-																			<a href="#" class="remove" title="Remove this item"><i class="icon-trash2"></i></a>
-																		</td>
+
 
 																		<td class="cart-product-name">
 																			<input type="text" id="1item" mark="1" class="item" name="itemname" size="15">
@@ -182,9 +179,7 @@
 																		</td>
 																	</tr>
 																	<tr class="cart_item">
-																		<td >
-																			<a href="#" class="remove" title="Remove this item"><i class="icon-trash2"></i></a>
-																		</td>
+
 
 																		<td class="cart-product-name">
 																			<input type="text" id="2item" mark="2" class="item" name="itemname" size="15">
@@ -207,19 +202,20 @@
 																			<input type="hidden" id="2total" name="totalprice">
 																		</td>
 																	</tr>
+
 																	<tr id="btnadd">
 																		<td>
-																			<span id="btn-plus" class="button button-3d nomargin fright"><i class="icon-line-circle-plus"></i></span>
 																		</td>
 																		<td>
 																		</td>
 																		<td>
 																		</td>
-																		<td>
-																		</td>
-																		<td>
-																		</td>
+																		<td></td>
+
+
 																	</tr>
+																	<span id="btn-plus" class="button button-3d nomargin fright"><i class="icon-line-circle-plus"></i></span>
+
 																</tbody>
 
 															</table>
@@ -700,9 +696,7 @@
 			bindquantity()
 			$("#btn-plus").on("click", function(event) {
 				var newtr = `<tr class="cart_item">
-					<td>
-						<a href="#" class="remove" title="Remove this item"><i class="icon-trash2"></i></a>
-					</td>
+
 
 					<td class="cart-product-name">
 						<input type="text" class="item" id=${++trindex}item mark=${trindex} name="itemname" size="15">
@@ -904,7 +898,8 @@ function resultPost (result){
 		${result.data.content}
 		</div>
 		<div class="panel-footer">
-		<i class="icon-like"> </i> ${result.data.likes.length} Likes
+		<a href="#${result.data._id}likes" mark=${result.data._id} class="leftmargin-sm comment-like-btn" id=${result.data._id}btn-comment-like><i class="icon-like"></i> ${result.data.likes.length} Likes</a>
+
 		<a href="#${result.data._id}btn-comment-list" mark=${result.data._id} class="leftmargin-sm comment-list-btn" id=${result.data._id}btn-comment-list><i class="icon-comments"></i> ${result.data.comments.length} Comments</a>
 		</div>
 
@@ -963,15 +958,13 @@ function resultPost (result){
 									${result.data[i].content}
 									</div>
 									<div class="panel-footer">
-									<i class="icon-like"> </i> ${result.data[i].likes.length} Likes
+
+									<a href="#${result.data[i]._id}likes" mark=${result.data[i]._id} class="leftmargin-sm comment-like-btn" id=${result.data[i]._id}btn-comment-like><i class="icon-like"></i> ${result.data[i].likes.length} Likes</a>
 									<a href="#${result.data[i]._id}btn-comment-list" mark=${result.data[i]._id} class="leftmargin-sm comment-list-btn" id=${result.data[i]._id}btn-comment-list><i class="icon-comments"></i> ${result.data[i].comments.length} Comments</a>
 									</div>
-
 											<div class="panel-footer" id=${result.data[i]._id}panel-footer>
 												<input type="text" id="template-contactform-subject" mark=${result.data[i]._id} name="template-contactform-subject" value="" class="required sm-form-control comment-box" aria-required="true">
 												<div class="spost clearfix" id=${result.data[i]._id}comment-list>
-
-
 											</div>
 
 										</div>
@@ -994,6 +987,7 @@ function resultPost (result){
 									</ul>
 								</div>
 								`
+
 								$(`#${result.data[i]._id}comment-list`).prepend(commentHTML)
 									}
 									$(`#${result.data[i]._id}comment-list`).hide()
@@ -1003,10 +997,27 @@ function resultPost (result){
 											$(`#${id}comment-list`).show()
 										})
 									})
+									$('.comment-like-btn').each(function(){
+										var id = $(this).attr('mark')
+										$(this).on('click',function () {
+											addLike(id)
+										})
+									})
+
 									bindcommentbox()
 									}
 		        }
 		    })
+		 }
+		 function addLike(id){
+			 $.ajax({
+					 url: '/api/messages/like/'+id,
+					 type: 'PUT',
+					 success: function(result) {
+						 console.log(id,"like")
+				 			$(`#${id}btn-comment-like`).html(`<i class="icon-like"></i> ${result.count} Likes`)
+					 }
+			 })
 		 }
 		 function bindcommentbox() {
 			 $('.comment-box').unbind('keyup').bind("keyup", function(e) {
@@ -1087,13 +1098,18 @@ function resultPost (result){
 							</div>
 							`
 							$('#listgudang').prepend(listgudangHTML)
+
+
 							if(result.data[k].transactions){
 								for (let i = 0; i < result.data[k].transactions.length; i++) {
+										var nominal = String(result.data[k].transactions[i].nominal);
+										var nominalDel = nominal.replace(/(\d)(?=(\d\d\d)+(?!\d))/g, "$1,");
+
 									var listrequestHTML = `
 									<tr>
 										<td>${~~(i+1)}</td>
 										<td>${result.data[k].transactions[i].recipient}</td>
-										<td>IDR ${result.data[k].transactions[i].nominal}</td>
+										<td>IDR ${nominalDel}</td>
 										<td><span class="label label-success">${result.data[k].transactions[i].status}</span></td>
 									</tr>`
 									$('#bodylistgudang').append(listrequestHTML)
@@ -1122,6 +1138,7 @@ function resultPost (result){
 			$('.price').each(function(){
 				var id = $(this).attr('id')
 				var mark = $(this).attr('mark')
+
 				$(this).on('keyup',function () {
 					var prc = parseInt($(`#${id}`).val())
 					var qty = parseInt($(`#${mark}quantity`).val())
