--- a/views/home.ejs
+++ b/views/home.ejs
@@ -71,11 +71,12 @@
 
 
 							  <ul class="nav navbar-nav navbar-right nobottommargin">
-								<li><a href="#"></a></li>
 								<li class="dropdown">
-								  <a href="#" class="dropdown-toggle" data-toggle="dropdown" aria-expanded="false">Ivan Gerard <b class="caret"></b></a>
+								  <a href="#" class="dropdown-toggle" data-toggle="dropdown" aria-expanded="false"><img class="img-circle" src="images/testimonials/1.jpg" style="width:10%" alt=""> Ivan Gerard <b class="caret"></b></a>
 								  <ul class="dropdown-menu" role="menu">
-									<li><a href="#">Profile</a></li>
+
+
+									<li><a href="#" data-toggle="modal" data-target="#change-profile"> Profile</a></li>
 									<li><a href="#">My Transaction</a></li>
 
 									<li class="divider"></li>
@@ -88,12 +89,56 @@
 		<!-- #header end -->
 
 
+
 		<!-- Content
 		============================================= -->
 		<section id="content">
 
 			<div class="content-wrap">
 				<div class="container clearfix">
+					<div class="modal fade" id="change-profile" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+						<div class="modal-dialog">
+							<div class="modal-body">
+								<div class="modal-content">
+									<div class="modal-header">
+										<button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+										<h4 class="modal-title" id="myModalLabel">Change Profile</h4>
+									</div>
+
+									<div class="modal-body">
+										<form action="/api/users" method="post" class="nobottommargin">
+											<div class="col_full">
+												<label class="font-body capitalize" for="profile-form-modal-photo">Change Profile Picture</label>
+														<input type="file" id="profile-form-modal-photo">											</div>
+														<div class="col_full">
+															<label class="font-body capitalize" for="profile-form-modal-fullname">Full Name:</label>
+															<input type="text" id="profile-form-modal-fullname" name="fullname" value="" class="form-control" />
+														</div>
+
+											<div class="col_full">
+												<label class="font-body capitalize" for="profile-form-modal-email">Email Address:</label>
+												<input type="text" id="profile-form-modal-email" name="email" value="" class="form-control" />
+											</div>
+
+
+											<div class="col_full">
+												<label class="font-body capitalize" for="profile-form-modal-password">Password:</label>
+												<input type="password" id="profile-form-modal-password" name="password" value="" class="form-control" />
+											</div>
+
+											<div class="col_full nobottommargin">
+												<button class="button button-rounded nomargin" id="profile-form-modal-submit" name="register-form-modal-submit" type="submit" value="register">Submit</button>
+											</div>
+										</form>
+									</div>
+									<div class="modal-footer">
+										<span class"error"></span>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+
 
 
 					<div class="col_three_fifth" id="content-list" >
