--- a/views/home.ejs
+++ b/views/home.ejs
@@ -71,6 +71,7 @@
 
 
 							  <ul class="nav navbar-nav navbar-right nobottommargin">
+								<li><a href="#"></a></li>
 								<li class="dropdown">
 								  <a href="#" class="dropdown-toggle" data-toggle="dropdown" aria-expanded="false"><img class="img-circle" src="images/testimonials/1.jpg" style="width:10%" alt=""> Ivan Gerard <b class="caret"></b></a>
 								  <ul class="dropdown-menu" role="menu">
@@ -155,7 +156,14 @@
 										<div class="tab-content clearfix ui-tabs-panel ui-widget-content ui-corner-bottom" id="tabs-post" aria-labelledby="ui-id-21" role="tabpanel" aria-hidden="false" style="display: block;">
 											<form  id="form-message" action="" >
 												<textarea class="required sm-form-control" id="content-text" name="content-text" rows="6" cols="30" aria-required="true"></textarea>
+													<div class="image-upload">
+													    <label for="file-input">
+													        <i class="icon-line-camera" style="font-size:20px"></i> Upload Photo
+													    </label>
+													    <input id="file-input" type="file" style="display:none"/>
+													</div>
 												<button type="submit" id="post-message" class="button button-3d button-small button-rounded button-green fright topmargin-sm">Post</a>
+
 											</form>
 
 										</div>
