--- a/views/home.ejs
+++ b/views/home.ejs
@@ -143,7 +143,7 @@
 												<textarea class="required sm-form-control" id="content-text" name="content-text" rows="6" cols="30" aria-required="true"></textarea>
 													<div class="image-upload">
 													    <label for="file-input">
-													        <i class="icon-line-camera" style="font-size:20px"></i> Upload 
+													        <i class="icon-line-camera" style="font-size:20px"></i> Upload
 													    </label>
 													    <input id="file-input" type="file" style="display:none"/>
 													</div>
@@ -781,7 +781,7 @@
 			 });
 			$("#profile-form-modal-submit").unbind().on("click", function(event) {
 				$("#formphoto").submit(function(e){
-						// e.preventDefault()
+						e.preventDefault()
 						var formObj = $(this);
 				    var formURL = formObj.attr("action");
 				    var formData = new FormData(this);
@@ -790,7 +790,9 @@
 				        url: formURL,
 				    		type: 'POST',
 				        data:  formData,
-				    		mimeType:"multipart/form-data",
+								processData: false,
+    contentType: false,
+				    		enctype: 'multipart/form-data',
 								success:function(result, textStatus, jqXHR)
 								{
 									console.log(result);
