--- a/views/home.ejs
+++ b/views/home.ejs
@@ -143,7 +143,7 @@
 												<textarea class="required sm-form-control" id="content-text" name="content-text" rows="6" cols="30" aria-required="true"></textarea>
 													<div class="image-upload">
 													    <label for="file-input">
-													        <i class="icon-line-camera" style="font-size:20px"></i> Upload 
+													        <i class="icon-line-camera" style="font-size:20px"></i> Upload
 													    </label>
 													    <input id="file-input" type="file" style="display:none"/>
 													</div>
@@ -359,300 +359,7 @@
 						</div>
 					</div>
 					<div class="col_two_fifth col_last  nomargin" id="listgudang">
-						<div class="panel panel-default">
-							<div class="panel-heading">
-								<h3 class="panel-title ">Gudang Bogor</h3>
-							</div>
-							<div class="panel-body">
-								<table class="table table-striped">
-									<thead>
-									<tr>
-										<th>#</th>
-										<th>First Name</th>
-										<th>Total</th>
-										<th>Status</th>
-									</tr>
-									</thead>
-									<tbody>
-									<tr>
-										<td>1</td>
-										<td>Mark Zuck</td>
-										<td>IDR 2,000,000</td>
-										<td><span class="label label-success">Paid</span></td>
-									</tr>
-									<tr>
-										<td>2</td>
-										<td>Jacob</td>
-										<td>IDR 500,000</td>
-										<td><span class="label label-default">Unpaid</span></td>
-									</tr>
-									<tr>
-										<td>3</td>
-										<td>Larry</td>
-										<td>IDR 1,500,000</td>
-										<td><span class="label label-default">Unpaid</span></td>
-									</tr>
-									<tr>
-										<td>4</td>
-										<td>Mark Zuck</td>
-										<td>IDR 2,000,000</td>
-										<td><span class="label label-success">Paid</span></td>
-									</tr>
-									<tr>
-										<td>5</td>
-										<td>Mark Zuck</td>
-										<td>IDR 2,000,000</td>
-										<td><span class="label label-success">Paid</span></td>
-									</tr>
-									</tbody>
-								</table>
-							</div>
-						</div>
-						<div class="panel panel-default">
-							<div class="panel-heading">
-								<h3 class="panel-title ">Gudang Bogor</h3>
-							</div>
-							<div class="panel-body">
-								<table class="table table-striped">
-									<thead>
-									<tr>
-										<th>#</th>
-										<th>First Name</th>
-										<th>Total</th>
-										<th>Status</th>
-									</tr>
-									</thead>
-									<tbody>
-									<tr>
-										<td>1</td>
-										<td>Mark Zuck</td>
-										<td>IDR 2,000,000</td>
-										<td><span class="label label-success">Paid</span></td>
-									</tr>
-									<tr>
-										<td>2</td>
-										<td>Jacob</td>
-										<td>IDR 500,000</td>
-										<td><span class="label label-default">Unpaid</span></td>
-									</tr>
-									<tr>
-										<td>3</td>
-										<td>Larry</td>
-										<td>IDR 1,500,000</td>
-										<td><span class="label label-default">Unpaid</span></td>
-									</tr>
-									<tr>
-										<td>4</td>
-										<td>Mark Zuck</td>
-										<td>IDR 2,000,000</td>
-										<td><span class="label label-success">Paid</span></td>
-									</tr>
-									<tr>
-										<td>5</td>
-										<td>Mark Zuck</td>
-										<td>IDR 2,000,000</td>
-										<td><span class="label label-success">Paid</span></td>
-									</tr>
-									</tbody>
-								</table>
-							</div>
-						</div>
-						<div class="panel panel-default">
-							<div class="panel-heading">
-								<h3 class="panel-title ">Gudang Bogor</h3>
-							</div>
-							<div class="panel-body">
-								<table class="table table-striped">
-										<thead>
-										<tr>
-											<th>#</th>
-											<th>First Name</th>
-											<th>Total</th>
-											<th>Status</th>
-										</tr>
-										</thead>
-										<tbody>
-										<tr>
-											<td>1</td>
-											<td>Mark Zuck</td>
-											<td>IDR 2,000,000</td>
-											<td><span class="label label-success">Paid</span></td>
-										</tr>
-										<tr>
-											<td>2</td>
-											<td>Jacob</td>
-											<td>IDR 500,000</td>
-											<td><span class="label label-default">Unpaid</span></td>
-										</tr>
-										<tr>
-											<td>3</td>
-											<td>Larry</td>
-											<td>IDR 1,500,000</td>
-											<td><span class="label label-default">Unpaid</span></td>
-										</tr>
-										<tr>
-											<td>4</td>
-											<td>Mark Zuck</td>
-											<td>IDR 2,000,000</td>
-											<td><span class="label label-success">Paid</span></td>
-										</tr>
-										<tr>
-											<td>5</td>
-											<td>Mark Zuck</td>
-											<td>IDR 2,000,000</td>
-											<td><span class="label label-success">Paid</span></td>
-										</tr>
-										</tbody>
-									</table>
-							</div>
-						</div>
-						<div class="panel panel-default">
-							<div class="panel-heading">
-								<h3 class="panel-title ">Gudang Bogor</h3>
-							</div>
-							<div class="panel-body">
-								<table class="table table-striped">
-									<thead>
-									<tr>
-										<th>#</th>
-										<th>First Name</th>
-										<th>Total</th>
-										<th>Status</th>
-									</tr>
-									</thead>
-									<tbody>
-									<tr>
-										<td>1</td>
-										<td>Mark Zuck</td>
-										<td>IDR 2,000,000</td>
-										<td><span class="label label-success">Paid</span></td>
-									</tr>
-									<tr>
-										<td>2</td>
-										<td>Jacob</td>
-										<td>IDR 500,000</td>
-										<td><span class="label label-default">Unpaid</span></td>
-									</tr>
-									<tr>
-										<td>3</td>
-										<td>Larry</td>
-										<td>IDR 1,500,000</td>
-										<td><span class="label label-default">Unpaid</span></td>
-									</tr>
-									<tr>
-										<td>4</td>
-										<td>Mark Zuck</td>
-										<td>IDR 2,000,000</td>
-										<td><span class="label label-success">Paid</span></td>
-									</tr>
-									<tr>
-										<td>5</td>
-										<td>Mark Zuck</td>
-										<td>IDR 2,000,000</td>
-										<td><span class="label label-success">Paid</span></td>
-									</tr>
-									</tbody>
-								</table>
-							</div>
-						</div>
-						<div class="panel panel-default">
-							<div class="panel-heading">
-								<h3 class="panel-title ">Gudang Bogor</h3>
-							</div>
-							<div class="panel-body">
-								<table class="table table-striped">
-									<thead>
-									<tr>
-										<th>#</th>
-										<th>First Name</th>
-										<th>Total</th>
-										<th>Status</th>
-									</tr>
-									</thead>
-									<tbody>
-									<tr>
-										<td>1</td>
-										<td>Mark Zuck</td>
-										<td>IDR 2,000,000</td>
-										<td><span class="label label-success">Paid</span></td>
-									</tr>
-									<tr>
-										<td>2</td>
-										<td>Jacob</td>
-										<td>IDR 500,000</td>
-										<td><span class="label label-default">Unpaid</span></td>
-									</tr>
-									<tr>
-										<td>3</td>
-										<td>Larry</td>
-										<td>IDR 1,500,000</td>
-										<td><span class="label label-default">Unpaid</span></td>
-									</tr>
-									<tr>
-										<td>4</td>
-										<td>Mark Zuck</td>
-										<td>IDR 2,000,000</td>
-										<td><span class="label label-success">Paid</span></td>
-									</tr>
-									<tr>
-										<td>5</td>
-										<td>Mark Zuck</td>
-										<td>IDR 2,000,000</td>
-										<td><span class="label label-success">Paid</span></td>
-									</tr>
-									</tbody>
-								</table>
-							</div>
-						</div>
-						<div class="panel panel-default">
-							<div class="panel-heading">
-								<h3 class="panel-title ">Gudang Bogor</h3>
-							</div>
-							<div class="panel-body">
-								<table class="table table-striped">
-									<thead>
-									<tr>
-										<th>#</th>
-										<th>First Name</th>
-										<th>Total</th>
-										<th>Status</th>
-									</tr>
-									</thead>
-									<tbody>
-									<tr>
-										<td>1</td>
-										<td>Mark Zuck</td>
-										<td>IDR 2,000,000</td>
-										<td><span class="label label-success">Paid</span></td>
-									</tr>
-									<tr>
-										<td>2</td>
-										<td>Jacob</td>
-										<td>IDR 500,000</td>
-										<td><span class="label label-default">Unpaid</span></td>
-									</tr>
-									<tr>
-										<td>3</td>
-										<td>Larry</td>
-										<td>IDR 1,500,000</td>
-										<td><span class="label label-default">Unpaid</span></td>
-									</tr>
-									<tr>
-										<td>4</td>
-										<td>Mark Zuck</td>
-										<td>IDR 2,000,000</td>
-										<td><span class="label label-success">Paid</span></td>
-									</tr>
-									<tr>
-										<td>5</td>
-										<td>Mark Zuck</td>
-										<td>IDR 2,000,000</td>
-										<td><span class="label label-success">Paid</span></td>
-									</tr>
-									</tbody>
-								</table>
-							</div>
-						</div>
+			
 
 					</div>
 
@@ -761,7 +468,7 @@
 			})
 			$("#post-message").unbind().on("click", function(event) {
 						event.preventDefault()
-					 	postMessage($("#content-text").val())
+						if($("#content-text").val()!="") postMessage($("#content-text").val())
 			})
 
 			function postMessage(content) {
@@ -781,7 +488,8 @@
 			 });
 			$("#profile-form-modal-submit").unbind().on("click", function(event) {
 				$("#formphoto").submit(function(e){
-						e.preventDefault()
+						event.preventDefault()
+
 						var formObj = $(this);
 				    var formURL = formObj.attr("action");
 				    var formData = new FormData(this);
@@ -792,8 +500,8 @@
 				        data:  formData,
 				    		mimeType:"multipart/form-data",
 								contentType: false,
-							 cache: false,
-							 processData:false,
+							 	cache: false,
+							 	processData:false,
 								success:function(result, textStatus, jqXHR)
 								{
 									console.log(result);
