--- a/views/home.ejs
+++ b/views/home.ejs
@@ -149,10 +149,10 @@
 													    </label>
 													    <input id="file-input" type="file" name="photo" style="display:none"/>
 													</div>
-													<div class="col-md-6">
+													<!-- <div class="col-md-6">
 														<br>
 														<input id="input-11" name="input11[]" type="file" multiple class="file-loading" accept="image/*">
-													</div>
+													</div> -->
 
 
 												<button type="submit" id="post-message" class="button button-3d button-small button-rounded button-green fright topmargin-sm">Post</a>
