--- a/views/home.ejs
+++ b/views/home.ejs
@@ -74,8 +74,9 @@
 
 							  <ul class="nav navbar-nav navbar-right nobottommargin">
 								<li><a href="#"></a></li>
-								<li class="dropdown">
-								  <a href="#" class="dropdown-toggle" data-toggle="dropdown" aria-expanded="false"><img src='<%= profilepict %>'  class="img-rounded" alt="Cinque Terre" width="30" height="30"> <%= name%> <b class="caret"></b></a>
+								<li class="dropdown">											
+										<a href="#" class="dropdown-toggle" data-toggle="dropdown" aria-expanded="false"><img src='<%= profilepict%>'
+										 class="img-rounded" alt="Cinque Terre" width="30" height="30"> <%= name%> <b class="caret"></b></a>
 								  <ul class="dropdown-menu" role="menu">
 
 
@@ -517,10 +518,7 @@
 						$.ajax({
 								url: '/api/messages',
 								type: 'POST',
-								data: formData,
-								contentType: false,
-							 	cache: false,
-							 	processData:false,
+								data: content,
 								success: function(result) {
 										resultPost(result)
 								}
@@ -806,7 +804,7 @@ function resultPost (result){
 											</div>
 											<div class="entry-c">
 												<div class="entry-title">
-													<h4><a href="#">Ivan Gerard</a></h4>
+													<h4><a href="#">${result.data[i].userId.name}</a></h4>
 												</div>
 												<ul class="entry-meta">
 													<li>${postedtime}</li>
